--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
-html, body{
+html, 
+body{
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
 	width:100%;
 	height:100%;
@@ -9,7 +10,10 @@ html, body{
   cursor: context-menu;
 }
 
-a, a:focus, a:hover, a:visited{
+a, 
+a:focus, 
+a:hover, 
+a:visited{
 	text-decoration:none;
 	outline:0;
 	color:#927ee8;
@@ -19,7 +23,8 @@ a:hover{
   color:#eee
 }
 
-p, .title{
+p, 
+.title{
   padding:20px;
   margin:0
 }
@@ -28,7 +33,6 @@ h3{
   padding:3px;
   margin:0;
 }
-
 
 #div_header{
   position:sticky;
@@ -87,5 +91,29 @@ article a{
 
 article img, article iframe{
   width:90%;
-  height:auto
+  height:auto;
+}
+.element:float{
+  opacity:80%;
+}
+
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 3%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+  text-align: center;
+}
+.modal img{
+  height:80%;
+  padding: 20px;
+  background-color:white;
 }
