--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 html, 
 body{
-	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
+	font-family: 'Roboto', sans-serif;
 	width:100%;
 	height:100%;
 	margin:0;
@@ -15,12 +15,12 @@ a:focus,
 a:hover, 
 a:visited{
 	text-decoration:none;
-	outline:0;
-	color:#927ee8;
+  outline:0;
+  color:#eee
 }
 
 a:hover{
-  color:#eee
+  color:#bbb
 }
 
 p, 
@@ -72,7 +72,9 @@ title{
 
 .text{
   background-color: #222222;
-  padding:1%
+  padding:1%;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 #articles_container{
@@ -119,17 +121,17 @@ article img, article iframe{
   max-height:80%;
   max-width:80%;
   padding: 40px;
-  background-color:#333;
+  background-color:#777;
 }
 .download{
   position:relative;
-  top:-65px;
+  top:-60px;
 }
 img:hover{
   cursor:pointer;
 }
 
-#section_contact{
+#section_contact .text{
   text-align:center
 }
 
