--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ ul{
 }
 
 #div_picture{
-  background-image: url("./pic.jpg");
+  background-image: url("./header.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: contain;
